CSS Fix: Remove both overflow declarations.

--- a/client/gutenberg/extensions/gif/editor.scss
+++ b/client/gutenberg/extensions/gif/editor.scss
@@ -1,6 +1,4 @@
 .wp-block-jetpack-gif {
-	overflow: visible;
-
 	figure {
 		transition: padding-top 125ms ease-in-out;
 	}
