--- a/client/gutenberg/extensions/gif/style.scss
+++ b/client/gutenberg/extensions/gif/style.scss
@@ -1,7 +1,6 @@
 .wp-block-jetpack-gif {
 	clear: both;
 	margin: 0 0 20px;
-	overflow: hidden;
 	figure {
 		margin: 0;
 		position: relative;
